test/fail/order.cvc
export int main() {
    int a = 5;
    a = 6;
    int b = 7;
    return 0;
}
